--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div onclick="CloseMorew()" id="ShowMore">
                 <div class="Information-ShowMore">
                     <h1>info</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus assumenda dolore impedit iusto repudiandae laborum deleniti quisquam temporibus quasi saepe, voluptatum quibusdam perspiciatis omnis eius sequi vitae magnam excepturi.</p>
+                    <p>shan bun qandem robs nivov mta hayat ape karochi robs ara</p>
 
                 </div>
             </div>
@@ -153,9 +153,9 @@
             </div>
             
             <div class="footer-child">
-                <a href=""><img class="instagram" src="instagram.png" alt=""></a>               
-                <a href=""><img src="YouTube.png" alt=""></a>
-                <a href=""><img src="Telegram.webp" alt=""></a>
+                <a href="https://t.me/Armyanin_077"><img class="instagram" src="instagram.png" alt=""></a>               
+                <a href="https://t.me/armyanin_88"><img  src="YouTube.png"  alt=""></a>
+                <a href="https://t.me/armyanin_77"><img src="Telegram.webp" alt=""></a>
             </div>
         </div>
     </footer>
