--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>magazin71</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
             <div onclick="CloseMorew()" id="ShowMore">
                 <div class="Information-ShowMore">
                     <h1>info</h1>
-                    <p>shan bun qandem robs nivov mta hayat ape karochi robs ara</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at debitis distinctio ipsum id. Omnis, rerum. Beatae consequatur blanditiis tempora nostrum dicta fuga delectus eos at, ipsam, eius inventore temporibus voluptatibus vitae, placeat eaque? Similique, commodi corporis dolorum placeat laudantium esse error molestias? Blanditiis, quaerat veniam! Cumque vitae ab, nulla incidunt accusantium porro culpa praesentium officiis provident. Ipsam adipisci ullam officiis odit labore autem earum illo eos sequi expedita a ex facere suscipit nemo aliquid tempora iste enim mollitia recusandae iure, vitae eligendi voluptatum. Id a eligendi sapiente ea, rerum et dolorem rem illo ipsam repellendus nulla beatae voluptatibus dolore modi corporis totam quae autem. Sunt ab voluptatum vero. At quos non quae dolore debitis velit consectetur nesciunt quibusdam. Beatae nemo autem eveniet id harum et quod quo est doloremque necessitatibus vero, sunt cumque dolorum dicta praesentium? Amet consectetur id deleniti a voluptates voluptatum ipsa, eligendi atque at. Ab deleniti veniam dicta fuga magnam nobis eum, nemo dolor, necessitatibus modi harum possimus. Exercitationem dolores, magni assumenda veniam aliquam dignissimos soluta ratione voluptatem, at perferendis officia nobis libero commodi quo quasi impedit? Sed, mollitia! Placeat illo quae mollitia ipsum pariatur nobis maiores facere tempore. Harum deleniti corrupti animi laborum veniam odit consectetur assumenda non ab, beatae sequi eligendi voluptate nemo? Ea reprehenderit blanditiis aperiam eius quo, consequuntur illo ducimus! Laborum provident, repellendus omnis aliquid corrupti laudantium animi ex ab voluptatibus minima molestias ratione quibusdam voluptatum! Laboriosam nulla nostrum quasi quod qui, provident obcaecati earum non voluptas perspiciatis laudantium. Aspernatur molestias sequi exercitationem saepe quasi officia laborum accusantium repellat corporis voluptates deleniti, consectetur, unde ducimus accusamus quae animi aliquam. Labore distinctio tempore tempora officia reprehenderit sunt quidem quis placeat illo. Tenetur nesciunt sequi nulla assumenda possimus quo reprehenderit? Sint veritatis recusandae ullam cum blanditiis illo. Laudantium dignissimos facere iure vero ea voluptatum!</p>
 
                 </div>
             </div>
@@ -153,8 +153,8 @@
             </div>
             
             <div class="footer-child">
-                <a href="https://t.me/Armyanin_077"><img class="instagram" src="instagram.png" alt=""></a>               
-                <a href="https://t.me/armyanin_88"><img  src="YouTube.png"  alt=""></a>
+                <a href="https://t.me/armyanin_77"><img class="instagram" src="instagram.png" alt=""></a>               
+                <a href="https://t.me/armyanin_77"><img  src="YouTube.png"  alt=""></a>
                 <a href="https://t.me/armyanin_77"><img src="Telegram.webp" alt=""></a>
             </div>
         </div>
