--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>magazin71</title>
+    <title>MySite — официальный сайт</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -163,5 +163,13 @@
 
    
     <script src="script.js"></script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "MySite",
+  "url": "https://mysite.ru"
+}
+</script>
 </body>
 </html>
